изменение index.html

--- a/index.html
+++ b/index.html
@@ -71,8 +71,11 @@
         </td>
 
     </tr>
+    <button type="submit"class="submit">Зберегти</button>
+    </form>
 </table>
-<button type="submit"class="submit">Зберегти</button>
+
+
 
 </body>
 </html>
