изменение index.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <form id="once" action="/apply/" method="POST">
                 <label>
                     Ім'я, Прізвище :
-                    <input type="text" name="name" id="name" placeholder="Іван Іванич" required autofocus>
+                    <input type="text" name="name" id="name" placeholder="Іван Іванов" required autofocus>
                 </label>
 
         </td>
